<resources>
    <string name="app_name">ChatMates</string>
    <string name="welcome_to_chatmates">Welcome to ChatMates</string>
    <string name="login_to_connect_and_chat">Login to Connect and Chat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
    <string name="user">User</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
</resources>