<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="@dimen/_8sdp" />

        <!--    <androidx.appcompat.widget.AppCompatImageView-->
        <!--        android:id="@+id/imageSignOut"-->
        <!--        android:layout_width="@dimen/_30sdp"-->
        <!--        android:layout_height="@dimen/_30sdp"-->
        <!--        android:layout_marginTop="@dimen/_12sdp"-->
        <!--        android:layout_marginEnd="@dimen/_16sdp"-->
        <!--        android:layout_marginRight="@dimen/_16sdp"-->
        <!--        android:background="@drawable/background_icon"-->
        <!--        android:padding="@dimen/_6sdp"-->
        <!--        android:src="@drawable/round_power_settings_new_24"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:tint="@color/white"/>-->

        <TextView
            android:id="@+id/imageSignOut"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sign_out"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/round_logout_24"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"
            app:layout_constraintEnd_toStartOf="@id/imageSignOut"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/imageProfile"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_content_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageProfile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/searchUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/background_input"
                    android:hint="@string/user"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/conversationRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:padding="@dimen/_20sdp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/searchUser"
                    android:layout_marginTop="@dimen/_60sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"/>

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNewChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/round_email_24"
            android:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>